<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="AppID">eAFtucJR0T0NJMexWh7iZWBNi0MBq4OJwSE51TkC</string>
    <string name="ClientID">QErTxyMNBz9nW9I7xpoe2lZu1pi1O3IoxLQdKmVt</string>
    <string name="app_name">Languine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_view_module_title">Module Title</string>
    <string name="text_view_module_description">Placeholder for the desciption of the module</string>
    <string name="button_intro_vid">Intro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_exercise_menu">LessonTitle</string>
    <string name="title_activity_exercise">ExerciseTitle</string>
    <string name="facebook_app_id">1690408691215611</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_credits">Credits</string>
    <string name="credits_text">
        Spanish Grammar and Vocabulary \n\nCopyright \nModern Language Centre\nKing
        \u2019s College London 2016\n\nProject Board:\nInitial stage: Dominique Borel and Catherine
        Brossard\nFinal Stage: Dr. Ana Mar\u00eda Sousa Aguiar de Medeiros and Anette Schroeder
        Rossell\n\nProject manager:\nCecilia Trevino\n\nInstructional Design: Cecilia Trevino
        \n\nContent written by Cecilia Trevino with the help of Diego Iudicissa, Victoria Montesinos
        Gasser and Beatriz Sanitago.\n\nContent development: Cecilia Trevino and Philip Wallace
        \nTheme Design:  Philip Wallace\n\nLanguage Consultancy: Alejandra Lopez Vazquez and Marta
        Nunez.\n\nTechnical Consultancy: Philip Wallace and Vanessa Skiadelli.\n\nVideo Scripts
        written by Cecilia Trevino\n\nVideo Production: Vanessa Skiadelli and Cecilia Trevino.
        \n\nVoices:\nJames Brillantes\nCecilia Trevino\nAdrian Gordaliza-Vega\nBeatriz Santiago
        \nLucia S. Moraga\nAlejandra Coutts-Lopez\nDiego de Jes\u00fas Flores-Jaime\n\nAudio
        recording and editing: James Brillantes and Cecilia Trevino\n\nPictures selection and
        editing Victoria Montesinos Gasser and Cecilia Trevino\n\nProofreading: Beatriz Santiago,
        Victoria Montesinos Gasser, Nick Shepherd, Tony Thorne and Mar\u00eda Mart\u00ednez Delgado
        Veiga.\n\nTesting: Mar\u00eda Mart\u00ednez Delgado Veiga.\n\nThis project was funded by
        King\u2019s College London Technology Enhanced Learning Fund.\n\nSpecial thanks to:
        \nDaniel Barrington and Dr. Ian Barrett from the Faculty of Arts and Humanities\nNelly
        Mars and Teresa Garc\u00eda form the Modern Language Centre.\nProfessor Mark Russell,
        Elena Hernandez-Martin, and Vanessa Skiadelli, from the Centre of Technology Enhanced
        Learning. \nDr. Erika Erdely Ruiz from the Centre for Mexican Studies National Autonomous
        University of Mexico (UNAM)-King\u2019s College London.\n
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="glossary_text">
        a la derecha: to the right,
        a la izquierda: to the left,
        abierto: open,
        abrigo: coat,
        acuarela: watercolour,
        adiós: goodbye,
        aeropuerto: airport,
        agencia de viajes: travel agency,
        agua con gas: sparkling water,
        agua sin gas: still water,
        ahí / allí: there,
        al lado (de): next (to),
        albergue: hostel,
        almuerzo: lunch,
        amarillo/a: yellow,
        andén: platform,
        antes: before,
        apellido: surname,
        aperitivo: appetizer,
        aquí: here,
        arte moderno: modern art,
        artista: artist,
        ascensor: elevator,
        autobús: bus,
        avión: plane,
        ayudar: to help,
        azúcar: sugar,
        azul: blue,
        baloncesto: basketball,
        bar: bar,
        barrio: district,
        beber: to drink,
        bebida: drink,
        bicicleta: bicycle,
        billete de ida y vuelta: return ticket,
        billete de ida: one-way ticket,
        billete: ticket,
        blanco/a: white,
        botones: bellboy,
        buenas noches: good evening / night,
        buenas tardes: good afternoon,
        buenos días: good morning,
        caliente: hot,
        calle: street,
        camarero/a: waiter / waitress,
        cambiar: to exchange,
        cambio: change,
        camisa: shirt,
        camiseta: t-shirt,
        cansado: tired,
        carne: meat,
        carta: menu,
        catedral: cathedral,
        cena: dinner,
        centro comercial: shopping centre,
        cerca: nearby,
        cerrado: closed,
        código postal: postcode,
        comer: to eat,
        comprar: to buy,
        consigna: left-luggage office,
        copa: glass (wine),
        cortado: espresso macchiato,
        cuadro: picture,
        cuchara: spoon,
        cucharilla: teaspoon,
        cuchillo: knife,
        chaqueta: jacket,
        chico/a: guy / girl,
        de nada: you’re welcome,
        del tiempo: room temperature,
        delante (de): in front of,
        dependiente/a: shop assistant,
        deportes: sports,
        deportista: athlete,
        derecha: right,
        desayuno: breakfast,
        después: after,
        detrás: behind,
        devolución: refund,
        devolver: to return,
        días festivos: bank holidays,
        días laborables: weekdays,
        difícil: difficult,
        dirección: address,
        discoteca: disco / club,
        discoteca: disco / club,
        domingo: Sunday,
        efectivo: cash,
        en frente (de): opposite (to),
        encantado / mucho gusto: nice to meet you,
        ensalada: salad,
        entrada: ticket,
        entre: between,
        equipaje: luggage,
        escaleras mecanicas: escalator,
        escaleras: stairs,
        escultura: sculpture,
        esquina: corner,
        estación: train station,
        estoy muerto/a: I’m dead tired,
        estudiar: to study,
        excursión: excursión / trip,
        exposición: exhibition,
        fácil: easy,
        farmacia: pharmacy / chemist,
        fin de semana: weekend,
        frío/a:  cold,
        fruta: fruit,
        fútbol: football,
        galería de arte: art gallery,
        galleta: biscuit,
        ganga: bargain,
        genial: cool,
        girar: to turn,
        glorieta: roundabout,
        gracias: thank you,
        guía turístico: tourist guide,
        guía: guidebook,
        habitación: room,
        hacer planes: making plans,
        hasta luego: see you later,
        hasta pronto: see you soon,
        hielo: ice,
        hola: hello / hi,
        horario: opening hours,
        horario: schedule,
        hostal: guesthouse / inn,
        hotel: hotel,
        iglesia: church,
        infusión: herbal tea,
        izquierda: left,
        jersey: jumper,
        jueves: Thursday,
        juntos: together,
        la cuenta: the bill,
        leche: milk,
        leer: to read,
        lejos: far,
        limonada: lemonade,
        lugares turísticos: places of touristic interest,
        lunes: Monday,
        llamada perdida: missed call,
        llamar: to call,
        maleta: suitcase,
        mañana: morning,
        mapa: map,
        mármol: marble,
        marrón: brown,
        martes: Tuesday,
        mensaje (de texto): text message,
        menú: set menu,
        mesa: table,
        metro: tube,
        miércoles: Wednesday,
        monumento: monument,
        morado/a: purple,
        museo: museum,
        nacionalidad: nationality,
        naranja: orange,
        natillas: custard,
        negro/a: black,
        niño/a: boy / girl,
        noche: night,
        nombre: name,
        obra maestra: masterpiece,
        ocupación: occupation,
        oleo: oil painting,
        pan: bread,
        pantalón: trouser,
        parque: park,
        pastel: cake,
        patatas fritas: French fries,
        pedir: to order,
        perdone: excuse me,
        persona mayor: senior citizen,
        pescado: fish,
        pintor: painter,
        pintura: painting,
        planta: floor,
        plato: dish,
        plaza: square,
        pollo: chicken,
        ponerse de acuerdo:  to agree,
        postre: dessert,
        precio: price,
        preguntar: to ask,
        presentar: to introduce,
        primer plato: starter,
        probador: fitting room,
        probarse: to try on,
        propina: tip,
        quedar: to meet,
        quedarse: to stay,
        quiosco: kiosk,
        rebajas: sales,
        recepción: reception,
        recepcionista: receptionist,
        recibo: sales receipt,
        recoger: to pick up,
        refresco: soft drink / soda,
        registrarse: to check in,
        reserva: reservation / booking,
        reservar: to book,
        restaurante: restaurant,
        retrato: portrait,
        rojo/a: red,
        rosa: pink,
        sábado: Saturday,
        sala: room,
        sandalias: flip flops,
        seguir: to continue,
        segundo plato: main course,
        servicio de habitaciones: room service,
        servicios: public toilet,
        servilleta: napkin,
        silla: chair,
        sopa: soup,
        supermercado: supermarket,
        talla: size,
        también: too,
        tampoco: neither,
        tarde: afternoon / evening,
        tarifa: fare,
        tarjeta de crédito / débito:  credit / debit card,
        taxi: taxi,
        taza: cup,
        té: tea,
        teléfono: telephone,
        tenedor: fork,
        tenis: tennis,
        tetera: teapot,
        tienda: shop,
        todo recto: straight away,
        tomar algo: to go for a drink,
        trabajar: to work,
        transporte público: public transport,
        tren: train,
        vagón: carriage,
        vale: okay,
        vaqueros: jeans,
        vaso: glass (tumbler),
        ver: to watch,
        verde: green,
        verdura: vegetables,
        vestido: dress,
        vía: track,
        viajar: to travel,
        viaje: trip,
        viajero: passenger,
        viernes: Friday,
        vino blanco: white wine,
        vino rosado: rose wine,
        vino tinto: red wine,
        visita con guía: guided tour,
        visitar: to visit,
        zapatería: shoe shop,
        zapatos: shoes,
        zumo de naranja: orange juice

    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="observe">Observe</string>
    <string name="reflect">Reflect</string>
    <string name="experiment">Experiment</string>
    <string name="button_resume">Resume</string>
    <string name="button_intro">Intro</string>
    <string name="button_revision">Revision</string>
    <string name="button_exercises">Exercises</string>
    <string name="prompt_name">Enter full name</string>
</resources>