<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_module_select"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true">

                <!-- TODO: change text color, size, style to material attributes-->
                <TextView
                    android:id="@+id/text_view_module_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="@string/text_view_module_title"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_module_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_module_titlei"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/text_view_module_description"
                    android:textColor="#666"
                    android:textSize="14dp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_view_module_picture"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>

        <Button
            android:id="@+id/button_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_resume"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button_intro_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_intro_vid"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_revision_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_revision"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_exercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_exercises"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>