<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.puzzle.appname.ExerciseMenuActivity"
    tools:showIn="@layout/activity_exercise_menu">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observe"
        android:id="@+id/observeButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reflect"
        android:id="@+id/reflectButton"
        android:layout_below="@+id/observeButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experiment"
        android:id="@+id/experimentButton"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/reflectButton"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="false" />
</RelativeLayout>
