<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true">

                <TextView
                    android:id="@+id/module_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="Hello"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/module_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/module_title"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="World"
                    android:textColor="#666"
                    android:textSize="14dp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentRight="true"
                android:padding="@dimen/activity_horizontal_margin"/>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_resume"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_intro"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_revision"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_exercises"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>